# cornor-rgb-lamp

./: .gitignore  Makefile  README.md  cmake-variants.yaml
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: nucleo_l476rg.overlay
app/src/: info_indicator.cpp  info_indicator.hpp  main.cpp  patterns.hpp
app/src/utils/: timeout_timer.cpp  timeout_timer.hpp
utils/: debug_with_swo.cfg
